# Cursed-Pong-Dev

./: Cargo.toml  LICENSE  Makefile  README.md  cpf.md  dmg  index.html  install_macos.sh  logo.icns  main.rs  sql.db
files/images/amogus/: Pack.toml
game/: Cargo.toml
game/src/: colors.rs  defs.rs  gui.rs  gui_parts.rs  main.rs  updatefn.rs
game/src/windows/: w_gui.rs
install/installer_linux/: Cargo.toml
install/installer_macos/: Cargo.toml
install/installer_macos/src/: gui.rs  main.rs
install/installer_windows/: Cargo.toml
install/macos.app/: Icon.icns
installer_windows/: main.py
python/: files.py  updater.py
src/: gui.rs  main.rs
src/windows/: w_gui.rs
website/: index.html
