[package]
name = "game"
version = "1.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8.0", features = ["image", "tokio"] }
mongodb = { version = "2.6.0", default-features = false, features = ["tokio-sync"] }
tokio = { version = "1.0", features = ["sync"] }
version = "3.0.0"
rand = "0.8.5"
raster = "0.2.0"
whoami = "1.4.1"
random_word = "0.3.1"
serde = "1.0.177"
