[package]
name = "game"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.6.1", features = ["sync"], default-features = false}
iced = { version = "0.10", features = ["image", "tokio"] }
tokio = { version = "1.0", features = ["sync"] }
version = "3.0.0"
rand = "0.8.5"
whoami = "1.4.1"
rusty_audio = "1.4.1"
toml = "0.7.8"
